--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+:root {
+  --primary-text-color: rgb(67, 68, 85);
+}
 body {
   font-family: "Roboto", sans-serif;
+  color: var(--primary-text-color);
+}
+ul,
+li,
+a {
+  list-style: none;
+  text-decoration: none;
 }
