--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,44 @@
 :root {
   --primary-text-color: rgb(67, 68, 85);
+  --primary-blue-color: rgb(77, 90, 229);
+  --font-family: "Roboto", sans-serif;
+  --second-family: "Raleway", sans-serif;
 }
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: var(--font-family);
   color: var(--primary-text-color);
 }
-ul,
-li,
-a {
+.logo {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 133%;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
+}
+.logo-span {
+  color: var(--primary-blue-color);
+}
+.list {
   list-style: none;
   text-decoration: none;
+}
+.navigation {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+.hero.title{
+  font-size: 48px;
+}
+.title {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+ 
 }
