--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
   --grey: rgba(46, 47, 66, 0.7);
   --ocean: rgb(64, 75, 191);
   --light-slate: rgb(142, 143, 153);
+  --navy-blue-modal: rgba(46, 47, 66, 0.4);
 
   --font-family: "Roboto", sans-serif;
   --second-family: "Raleway", sans-serif;
@@ -50,7 +51,8 @@ img {
 }
 .header-section {
   border-bottom: 1px solid var(--cornflower);
-  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .main-nav {
   display: flex;
@@ -289,7 +291,7 @@ img {
   background-color: rgba(255, 255, 255, 0.1);
 }
 .list > .item.footer:hover,
-.list > .item.footer:focus{
+.list > .item.footer:focus {
   background-color: rgb(49, 208, 170);
 }
 
@@ -366,4 +368,33 @@ img {
   padding-bottom: 32px;
   padding-left: 16px;
   border-top: 0;
+}
+/* CSS backdrop and modal */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--navy-blue-modal);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  background-color: var(--primary-white-color);
+  border-radius: 4px;
+  width: 408px;
+  height: 576px;
+  box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 1px 1px 0 rgba(0, 0, 0, 0.14);
 }
