--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,20 @@ img {
 .list.nav > .item:not(:last-child) {
   margin-right: 40px;
 }
+.list.nav > .item {
+  position: relative;
+}
+.current::after {
+  content: "";
+  position: absolute;
+
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--ocean);
+  left: 0px;
+  top: 45px;
+}
 .addres {
   margin-left: auto;
   font-style: normal;
@@ -386,7 +400,7 @@ img {
 }
 
 .modal {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -397,4 +411,22 @@ img {
   height: 576px;
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 1px 1px 0 rgba(0, 0, 0, 0.14);
+}
+.btn-close {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 24px;
+  height: 24px;
+  margin-left: auto;
+  margin-top: 24px;
+  margin-right: 24px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #e7e9fc;
+}
+.btn-close:hover {
+  background-color: var(--ocean);
+  fill: var(--primary-white-color);
 }
