--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@
 
   --font-family: "Roboto", sans-serif;
   --second-family: "Raleway", sans-serif;
+
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
   font-family: var(--font-family);
@@ -182,6 +184,7 @@ img {
   height: 40px;
   border-radius: 50%;
   margin-right: 24px;
+  transition: background-color 250ms var(--timing-function);
 }
 .social-icon > .list > .item:last-child {
   margin-right: 0px;
@@ -209,6 +212,8 @@ img {
   border: 1px solid var(--light-slate);
   border-radius: 4px;
   fill: var(--light-slate);
+  transition: fill 250ms var(--timing-function),
+    border-color 250ms var(--timing-function);
 }
 .link-customers:hover {
   fill: var(--primary-blue-color);
@@ -247,6 +252,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
+  transition: color 250ms var(--timing-function);
 }
 .navigation:hover,
 .navigation:focus {
@@ -258,6 +264,7 @@ img {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
+  transition: color 250ms var(--timing-function);
 }
 .contact:hover,
 .contact:focus {
@@ -303,6 +310,7 @@ img {
 }
 .list > .item.footer {
   background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms var(--timing-function);
 }
 .list > .item.footer:hover,
 .list > .item.footer:focus {
@@ -327,6 +335,7 @@ img {
   color: var(--primary-white-color);
 
   border-color: transparent;
+  transition: background-color 250ms var(--timing-function);
 }
 .btn:hover {
   background-color: #404bbf;
@@ -337,6 +346,8 @@ img {
 
   background-color: var(--cloud);
   color: var(--primary-blue-color);
+  transition: background-color 250ms var(--timing-function),
+    color 250ms var(--timing-function);
 }
 .btn.portfolio:hover,
 .btn.portfolio:focus {
@@ -363,6 +374,8 @@ img {
 .item-example {
   margin-right: 24px;
   margin-bottom: 48px;
+  box-shadow: none;
+  transition: box-shadow 250ms var(--timing-function);
 }
 .item-example:hover {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
@@ -383,6 +396,34 @@ img {
   padding-left: 16px;
   border-top: 0;
 }
+.overlay {
+  position: relative;
+  overflow: hidden;
+}
+.overlay-block {
+  position: absolute;
+  font-family: var(--font-family);
+  padding-top: 40px;
+  padding-left: 32px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  padding-right: 32px;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--primary-blue-color);
+  color: var(--primary-white-color);
+
+  transform: translateY(100%);
+  transition: transform 250ms var(--timing-function);
+}
+
+.item-example:hover .overlay-block {
+  transform: translateY(0);
+}
 /* CSS backdrop and modal */
 
 .backdrop {
@@ -392,18 +433,23 @@ img {
   width: 100%;
   height: 100%;
   background-color: var(--navy-blue-modal);
+  opacity: 1;
+  transition: opacity 250ms var(--timing-function);
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
+.backdrop.is-hidden > .modal {
+  transform: translate(-50%, -50%) scale(1.5);
+}
 
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
 
   background-color: var(--primary-white-color);
   border-radius: 4px;
@@ -411,6 +457,7 @@ img {
   height: 576px;
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 1px 1px 0 rgba(0, 0, 0, 0.14);
+  transition: transform 250ms var(--timing-function);
 }
 .btn-close {
   display: flex;
@@ -425,8 +472,44 @@ img {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #e7e9fc;
+  transition: background-color 250ms var(--timing-function),
+    fill 250ms var(--timing-function);
 }
 .btn-close:hover {
   background-color: var(--ocean);
   fill: var(--primary-white-color);
+}
+
+.contact-div {
+  position: relative;
+  display: block;
+  width: 100px;
+  height: 100px;
+  background-color: teal;
+  animation-name: example;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction:alternate-reverse;
+}
+
+@keyframes example {
+  0% {
+    background-color: teal;
+    left: 0px;
+  }
+  25% {
+    left: 50px;
+  }
+  50% {
+    left: 100px;
+  }
+  75% {
+    left: 150px;
+  }
+  100% {
+    border-radius: 50%;
+    background-color: tomato;
+    left: 200px;
+  }
 }
