--- a/styles.css
+++ b/styles.css
@@ -56,36 +56,31 @@ img {
   box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
-.main-nav {
-  display: flex;
-}
+.addres,
 .list.nav {
+  display: none;
+}
+.burger-menu {
   display: flex;
-  margin-left: 76px;
-}
-.list.nav > .item:not(:last-child) {
-  margin-right: 40px;
-}
-.list.nav > .item {
-  position: relative;
-}
-.current::after {
-  content: "";
-  position: absolute;
-
+  position: fixed;
+  z-index: 1;
   width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--ocean);
-  left: 0px;
-  top: 45px;
+  height: 100%;
+  background-color: #fff;
+  top: 0px;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
 }
-.addres {
+.btn-burger-menu {
+  border: none;
+  background-color: transparent;
   margin-left: auto;
-  font-style: normal;
 }
-.addres > a:not(:last-child) {
-  margin-right: 40px;
+.svg-burger-menu {
+  stroke: black;
+  width: 32px;
+  height: 22px;
 }
 .hero-section {
   height: 600px;
