--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,70 @@ img {
   display: none;
 }
 .burger-menu {
+  padding-left: 40px;
+  padding-right: 24px;
+  padding-bottom: 40px;
+}
+.item-burger > .list {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 111%;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--primary-text-color);
+}
+.item-burger > .burger-current {
+  color: var(--primary-blue-color);
+}
+.item-burger:not(:last-child) {
+  margin-bottom: 40px;
+}
+.addres-burger {
+  font-style: normal;
+}
+.list-burger {
+  list-style: none;
+  margin-top: 32px;
+}
+.addres-burger > .tel {
+  display: inline-block;
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 111%;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--primary-blue-color);
+  margin-bottom: 40px;
+}
+.addres-burger > .mail {
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  color: var(--slate);
+}
+.social-icon-burger {
+  margin-top: 42px;
+}
+.social-icon-burger > .list {
+  display: flex;
+}
+.social-icon-burger > .list > .item:not(:last-child) {
+  margin-right: 54px;
+}
+.social-icon-burger > .list > .item {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  background-color: var(--primary-blue-color);
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+.burger-menu {
   display: flex;
   position: fixed;
   z-index: 1;
